--- a/src/pages/Product.css
+++ b/src/pages/Product.css
@@ -1,4 +1,4 @@
-/* Container for all product cards */
+/* 
 .product-container {
   display: flex;
   flex-wrap: wrap;
@@ -8,7 +8,7 @@
   margin-top: 80px;
 }
 
-/* Individual product card */
+
 .product-card {
   background-color: #fff;
   border: 1px solid #ddd;
@@ -23,14 +23,14 @@
   transform: scale(1.03);
 }
 
-/* Product image styling */
+
 .product-image img {
   width: 100%;
   height: 200px;
   object-fit: cover;
 }
 
-/* Product details styling */
+
 .product-details {
   padding: 15px;
 }
@@ -52,7 +52,7 @@
   color: #e91e63;
 }
 
-/* Loader and error message */
+
 .loader, .error {
   text-align: center;
   font-size: 1.2rem;
@@ -60,7 +60,7 @@
   color: #555;
 }
 
-/* Order button */
+
 .order-button {
   margin-top: 10px;
   padding: 10px 15px;
@@ -76,4 +76,4 @@
 .order-button:hover {
   background-color: #d81b60;
 }
-
+ */
